--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1351,5 +1351,9 @@ Since we work from the desktop down (desktop-first design) we need to order the 
     .social {
         margin: 0 auto;
     }
-    
+
+    /*FOOTER STYLES FOR XS*/
+    .hide--mobile {
+        display: none;
+    }  
 }
