--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1187,7 +1187,7 @@ Since we work from the desktop down (desktop-first design) we need to order the 
     }
 
     .mobile--close {
-        width: 2.5rem;
+        width: 100%;
         height: 2.5rem;
     }
 
