--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1213,10 +1213,15 @@ Since we work from the desktop down (desktop-first design) we need to order the 
     ul > a {
         width: 100%;
         justify-content: center;
-        padding-top: 1em;
-        padding-right: 0;
+        margin-top: 0;
+        padding: 0.5em 0;
         color: var(--color-light);
         display: flex;
+    }
+
+    ul > a:active {
+        background-color: rgba(255, 255, 255, 0.11);
+        border-radius: 5px;
     }
 
     li {
