--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -655,10 +655,15 @@ Since we work from the desktop down (desktop-first design) we need to order the 
     ul > a {
         width: 100%;
         justify-content: center;
-        padding-top: 1em;
-        padding-right: 0;
-        color: white;
+        margin-top: 0;
+        padding: 0.5em 0;
+        color: var(--color-light);
         display: flex;
+    }
+
+    ul > a:active {
+        background-color: rgba(255, 255, 255, 0.11);
+        border-radius: 5px;
     }
 
     .closed {
@@ -838,10 +843,15 @@ Since we work from the desktop down (desktop-first design) we need to order the 
     ul > a {
         width: 100%;
         justify-content: center;
-        padding-top: 1em;
-        padding-right: 0;
-        color: white;
+        margin-top: 0;
+        padding: 0.5em 0;
+        color: var(--color-light);
         display: flex;
+    }
+
+    ul > a:active {
+        background-color: rgba(255, 255, 255, 0.11);
+        border-radius: 5px;
     }
 
     .closed {
@@ -1021,10 +1031,15 @@ Since we work from the desktop down (desktop-first design) we need to order the 
     ul > a {
         width: 100%;
         justify-content: center;
-        padding-top: 1em;
-        padding-right: 0;
-        color: white;
+        margin-top: 0;
+        padding: 0.5em 0;
+        color: var(--color-light);
         display: flex;
+    }
+
+    ul > a:active {
+        background-color: rgba(255, 255, 255, 0.11);
+        border-radius: 5px;
     }
 
     .closed {
