--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -674,7 +674,7 @@ Since we work from the desktop down (desktop-first design) we need to order the 
         right: 0vw;
     }
 
-    /*HERO SECTION STYLES FOR XS*/ 
+    /*HERO SECTION STYLES FOR L*/ 
     h1 {
         font-size: 2.5rem;
         margin-bottom: 1rem;
@@ -730,7 +730,7 @@ Since we work from the desktop down (desktop-first design) we need to order the 
 
     
 
-    /*ABOUT SECTION STYLES FOR XS*/
+    /*ABOUT SECTION STYLES FOR L*/
     .grid-container-mobile {
         place-items: center;
         width: 100%;
@@ -742,7 +742,7 @@ Since we work from the desktop down (desktop-first design) we need to order the 
     }
     
 
-    /*TESTIMONIAL SECTION STYLES FOR XS*/
+    /*TESTIMONIAL SECTION STYLES FOR L*/
 
     .testimonial-text {
         font-size: 1.3rem; 
@@ -761,7 +761,7 @@ Since we work from the desktop down (desktop-first design) we need to order the 
         padding-bottom: 0.5rem;
     }
 
-    /*CONTACT SECTION STYLES FOR XS*/
+    /*CONTACT SECTION STYLES FOR L*/
     .form-wrapper {
         width: 100%;
     }
@@ -774,7 +774,7 @@ Since we work from the desktop down (desktop-first design) we need to order the 
         padding: 0;
     }
 
-    /*FOOTER SECTION STYLES FOR XS*/
+    /*FOOTER SECTION STYLES FOR L*/
 
     .container-mobile--100 {
         width: 100%;
