--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -778,6 +778,10 @@ Since we work from the desktop down (desktop-first design) we need to order the 
         padding: 0;
     }
 
+    .flex-center--mobile {
+        justify-content: center;
+    }
+
     /*FOOTER SECTION STYLES FOR L*/
 
     .container-2-mobile {
