--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -767,7 +767,8 @@ Since we work from the desktop down (desktop-first design) we need to order the 
     }
 
     .column-2-mobile {
-        width: 80%;
+        width: 100%;
+        padding: 0em 2em;
     }
 
     .column-2__text {
