--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -210,6 +210,10 @@ span {
     flex-direction: row;
 }
 
+.flex-order {
+    order: 1;
+}
+
 /*BOX SHADOWS AND CORNERS - they can go on any container, image or column elements*/
 .box-shadow {
     box-shadow: 3px 3px 5px var(--color-shadow);
@@ -663,9 +667,70 @@ footer {
 /*MEDIA QUERIES FOR XS (375px)*/
 @media screen and (max-width: 375px) {
 
+    /*XS STYLES FOR HEADER*/
+    .headerbar {
+        width: 100%;
+        padding: 0px 20px;
+    }
+
+    .headerbar__logo {
+        width: 15rem;
+    }
+
+    .mobile--open {
+        width: 2.5rem;
+        height: 2.5rem;
+    }
+
+    .column-2__open--mobile {
+        width: 100%;
+    }
+
+    ul {
+        width: 100%;
+    }
+
+    ul > a {
+        color: var(--color-light);
+        display: block;
+        text-align: center;
+        padding: 10px 0px;
+        width: 100%;
+    }
+
+    .column-2__nav--mobile {
+        position: absolute;
+        top: 0;
+        z-index: 1;
+        width: 45vw;
+        height: 100vh;
+        padding: 20px;
+        background: var(--color-primary);
+        background: linear-gradient(43deg, var(--color-primary) 0%, var(--color-secondary) 95%);
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        transition: all 1s ease-in-out;
+    }
+
+    .mobile--close {
+        height: 2.5rem;
+        width: 2.5rem;
+        margin-bottom: 50px;
+    }
+
+    .open {
+        right: 0;
+    }
+
+    .closed {
+        right: -45vw;
+    }
+
+
     /*XS STYLES FOR HERO SECTION*/
     h1 {
-        font-size: 3.2rem;
+        font-size: 3rem;
     }
 
     p {
@@ -679,12 +744,11 @@ footer {
     .container-mobile {
         width: 100%;
         height: 50%;
-        padding: 20px 0;
     }
 
     .column-2-mobile {
         width: 100%;
-        padding: 20px 0px;
+        padding: 20px 20px;
     }
 
     .column-2-mobile > img {
@@ -693,13 +757,59 @@ footer {
 
     /*XS STYLES FOR ABOUT SECTION*/
     h2 {
-        font-size: 2.4rem;
+        font-size: 2.2rem;
     }
 
     p {
         font-size: 1.2rem;
     }
 
+    .grid-container-mobile {
+        place-items: center;
+        width: 100%;
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+        grid-column-gap: 35px;
+        grid-row-gap: 35px;
+    }
 
+    /*XS STYLES FOR TESTIMONIAL SECTION*/
+    .testimonial-text {
+        font-size: 1.6rem;
+    }
 
+    .testimonial-card img {
+        margin-top: 3rem;
+    }
+
+    .testimonial-card  p {
+        padding: 0;
+    }
+
+    /*XS STYLES FOR CONTACT SECTION*/
+    .form-wrapper {
+        width: 100%;
+    }
+
+    label {
+        text-align: left;
+    }
+
+    .button {
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    /*XS STYLES FOR FOOTER*/
+    .hide-mobile {
+        display: none;
+    }
+
+    .social {
+        margin: 0 auto;
+    }
+
+    .no-margin {
+        margin-left: 0;
+    }
 }
