--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -471,6 +471,29 @@ footer {
 
 /*MEDIA QUERIES*/
 
+/*MEDIA FOR XXL SCREENS*/
+@media screen and (max-width: 1400px) {
+    /*Sets the container element (every section has one) to 85.72% or about 1200px (1200px/1400px = 1200.8px)*/
+    .container {
+        width: 85.72%;
+    }
+
+    .hero-image {
+        width: 80%;
+    }
+
+    /*Testimonial Section*/
+    .testimonial-card > img {
+        width: 20%;
+    }
+
+    /*Footer Section*/
+    .footer-logo {
+       width: 20rem; 
+    }
+
+}
+
 /*FONT STYLE DECLARATIONS*/
 
 /*POPPINS FONT STYLES*/
