--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -471,13 +471,13 @@ footer {
 
 /*MEDIA QUERIES*/
 
-/*MEDIA FOR XXL SCREENS*/
+/*MEDIA FOR XXL SCREENS (1400px)*/
 @media screen and (max-width: 1400px) {
     /*Sets the container element (every section has one) to 85.72% or about 1200px (1200px/1400px = 1200.8px)*/
     .container {
         width: 85.72%;
     }
-
+    
     .hero-image {
         width: 80%;
     }
@@ -490,6 +490,28 @@ footer {
     /*Footer Section*/
     .footer-logo {
        width: 20rem; 
+    }
+
+}
+
+/*MEDIA QUERIES FOR XL SCREENS (1200px)*/
+@media screen and (max-width: 1200px) {
+    /*General font sizes for the breakpoint*/
+    h1 {
+        font-size: 3.5rem;
+    }
+
+    h2 {
+        font-size: 3rem;
+    }
+
+    h3 {
+        font-size: 2rem;
+    }
+
+    .grid-container {
+        padding: 0;
+        width: 100%;
     }
 
 }
