--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -562,7 +562,7 @@ footer {
     }
 }
 
-/*MEDIA QUERIES FOR M SCREENS (576px)*/
+/*MEDIA QUERIES FOR S SCREENS (576px)*/
 @media screen and (max-width: 576px) {
 
     .column-2__nav--mobile {
@@ -624,6 +624,9 @@ footer {
         width: 80%;
     }
 }
+
+/*MEDIA QUERIES FOR XS SCREENS (375px)*/
+@media screen and (max-width: 375px)
 
 /*FONT STYLE DECLARATIONS*/
 
