--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -622,6 +622,12 @@ footer {
 /*MEDIA QUERIES FOR XS SCREENS (378px)*/
 @media screen and (max-width: 378px) {
 
+    .headerbar {
+        position: fixed;
+        top: 0;
+        left: 0;
+    }
+
     .flex-center-x-mobile {
         justify-content: center;
     }
