--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -652,6 +652,11 @@ footer {
         padding-top: 2rem;
         padding-bottom: 2rem;
     }
+
+    .form-wrapper {
+        width: 95%;
+        padding: 1em;
+    }
     
 }
 
