--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -471,11 +471,15 @@ footer {
     html, body {
         width: 100%;
         overflow-x: hidden;
-
     }
+
     /*Sets the container element (every section has one) to 85.72% or about 1200px (1200px/1400px = 1200.8px)*/
     .container {
         width: 85.72%;
+    }
+
+    .column-2 {
+        width: 50%;
     }
     
     .hero-image {
@@ -492,10 +496,16 @@ footer {
        width: 20rem; 
     }
 
+    picture > img {
+        width: 100%;
+    }
+
 }
 
 /*MEDIA QUERIES FOR XL SCREENS (1200px)*/
 @media screen and (max-width: 1200px) {
+
+
 
     html, body {
         width: 100%;
