Add hover styles for desktop nav and buttons

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -166,6 +166,11 @@ span {
     font-family: montserrat, sans-serif;
     font-size: 1.6rem;
     font-weight: 600;
+    transition: all 0.2s ease-in-out;
+}
+
+.button:hover {
+    background-color: var(--color-accent);
 }
 
 /*UTILITY CLASSES FOR USE PRIMARILY WITH FLEXBOX*/
@@ -313,6 +318,15 @@ ul>a {
     text-decoration: none;
     display: inline-block;
     padding-right: 1.5em;
+    transition: all 0.5s ease-in-out;
+}
+
+ul>a:hover {
+    color: var(--color-accent);
+}
+
+ul>a:active {
+    color: var(--color-accent);
 }
 
 ul>a:nth-child(5) {
